--- a/.github/workflows/WebApplication30520230421173035.yml
+++ b/.github/workflows/WebApplication30520230421173035.yml
@@ -45,7 +45,7 @@ jobs:
       with:
         creds: ${{ secrets.creds }}
     - name: Deploy to Azure WebApp
-      uses: ahmelsayed/webapps-deploy@v2
+      uses: azure/webapps-deploy@v2
       with:
         app-name: ${{ env.AZURE_WEBAPP_NAME }}
         package: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
