--- a/.github/workflows/WebApplication30520230421173035.yml
+++ b/.github/workflows/WebApplication30520230421173035.yml
@@ -49,3 +49,8 @@ jobs:
       with:
         app-name: ${{ env.AZURE_WEBAPP_NAME }}
         package: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
+    - uses: myConsciousness/bluesky-post@v2
+      with:
+        text: "Posting from GitHub to Blue Sky"
+        identifier: ${{ secrets.BLUESKY_IDENTIFIER }}
+        password: ${{ secrets.BLUESKY }}
