Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,7 +13,9 @@ pool:
 steps:
 - task: VSBuild@1
   inputs:
-    solution: '$(solution)'
+    solution: 'WebApplication305.sln'
     msbuildArgs: '/p:DeployOnBuild=true /p:WebPublishMethod=Package /p:PackageAsSingleFile=true /p:SkipInvalidConfigurations=true /p:PackageLocation="$(build.artifactStagingDirectory)"'
     platform: 'AnyCPU'
     configuration: '$(buildConfiguration)'
+    msbuildArchitecture: x64
+    vsVersion: "15.0"
