--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,7 +15,7 @@ steps:
   inputs:
     solution: 'WebApplication305.sln'
     msbuildArgs: '/p:DeployOnBuild=true /p:WebPublishMethod=Package /p:PackageAsSingleFile=true /p:SkipInvalidConfigurations=true /p:PackageLocation="$(build.artifactStagingDirectory)"'
-    platform: 'AnyCPU'
-    configuration: '$(buildConfiguration)'
+    platform: 'Any CPU'
+    configuration: 'Debug'
     msbuildArchitecture: x64
     vsVersion: "15.0"
